# wakeup

./: .gitignore  .releaserc  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml  semantic-release.yml  update-homebrew-tap.yml
crates/wakeup/: Cargo.toml
crates/wakeup-core/: Cargo.toml
crates/wakeup-core/src/: lib.rs
crates/wakeup-core/src/backend/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
crates/wakeup/src/: main.rs
docs/: release-automation.md
